--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
