--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^11.18.1",
     "lucide-react": "^0.473.0",
     "next": "14.2.16",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "react-intersection-observer": "^9.16.0",
